--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,19 @@
   "manifest_version": 2,
   "name": "Manipulated Image Detector",
   "version": "1.0",
-  "permissions": ["activeTab"],
-  "browser_action": {
-    "default_popup": "main.html"
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": true
   },
+  "permissions": [
+    "activeTab",
+    "contextMenus",
+    "tabs",
+    "windows"
+  ],
+  "browser_action": {
+    "default_popup": "popup.html"
+  },
+  
   "content_security_policy": "script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net; object-src 'self'"
 }
