--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,7 @@
     "windows"
   ],
   "browser_action": {
-    "default_popup": "popup.html"
+    "default_popup": "help.html"
   },
   
   "content_security_policy": "script-src 'self' 'unsafe-eval' https://cdn.jsdelivr.net; object-src 'self'"
