--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,11 @@
   "manifest_version": 3,
   "name": "Manipulated Image Detector",
   "version": "1.0",
+  "icons": {
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "background": {
     "service_worker": "background.js"
   },
@@ -10,8 +15,16 @@
     "contextMenus",
     "scripting"
   ],
+  "host_permissions": [
+    "*://*/*"
+  ],
   "action": {
-    "default_popup": "help.html"
+    "default_popup": "help.html",
+    "default_icon": {
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
+    }
   },
   "content_security_policy": {
     "extension_pages": "script-src 'self'; object-src 'self'"
