--- a/manifest.json
+++ b/manifest.json
@@ -13,12 +13,10 @@
   },
   "description": "Predict whether an image is authentic or if it has been manipulated.",
   "permissions": [
-    "activeTab",
-    "contextMenus",
-    "scripting"
+    "contextMenus"
   ],
   "host_permissions": [
-    "*://*/*"
+    "https://*/*"
   ],
   "action": {
     "default_popup": "help.html",
