--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Manipulated Image Detector",
   "author": "Nicholas Gin",
-  "version": "1.0.2",
+  "version": "1.0.1",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
@@ -13,8 +13,10 @@
   },
   "description": "Predict whether an image is authentic or if it has been manipulated.",
   "permissions": [
-    "activeTab",
     "contextMenus"
+  ],
+  "host_permissions": [
+    "https://*/*"
   ],
   "action": {
     "default_popup": "help.html",
