--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Manipulated Image Detector",
   "author": "Nicholas Gin",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
@@ -16,7 +16,7 @@
     "contextMenus"
   ],
   "host_permissions": [
-    "https://*/*"
+    "<all_urls>"
   ],
   "action": {
     "default_popup": "help.html",
