--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "Manipulated Image Detector",
   "author": "Nicholas Gin",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
@@ -11,7 +11,7 @@
   "background": {
     "service_worker": "background.js"
   },
-  "description": "Predict whether an image is authentic or if it has been manipulated.",
+  "description": "Predict if an image on a webpage is authentic or if it has been manipulated using a model built for this purpose.",
   "permissions": [
     "contextMenus"
   ],
